--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,12 +26,6 @@ archives:
       - goos: windows
         formats: [zip]
 
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
 
 checksum:
   name_template: "checksums.txt"
@@ -40,7 +34,17 @@ snapshot:
   version_template: "{{ .Tag }}-next"
 
 release:
-  
+  header: |
+    ## Major Feature Update with Graft  🚀
+    
+    This release introduces significant enhancements to Graft, moving from basic local-to-server deployments to a more robust CI/CD-driven workflow using GitHub Actions and our new `graft-hook` service.
+    
+    ### Key Highlights:
+    1. **Git Remote Modes**: Move away from direct local-to-server channels. Deployments now go through GitHub Workflows and CI/CD channels.
+    2. **Graft-Hook**: A new webhook service personalized specifically for Graft-based servers, maintaining a zero-config solution with proper security.
+    3. **Automated GitHub Workflows**: Graft now generates production-ready workflows automatically from your `graft-compose.yml` context.
+    4. **Enhanced Monitoring**: Easy CLI-based monitoring for `graft-hook`, including real-time build error logs.
+    5. **Bug Fixes & UX**: Numerous performance improvements and user experience refinements.
   footer: |
     ---
     Released by **skssmd** using [GoReleaser](https://github.com/goreleaser/goreleaser).
