Minor Bug Fixes and Improvements

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -41,7 +41,12 @@ release:
     1. **Cloudflare API Integration**: Automated DNS zone mapping based on Traefik host labels.
     2. **Cloudflare Zone Registry**: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
     3. **Database Backup Automation(Infrastructure)**: Easily backup Infrastructure databases to S3/R2(Experimental).
-    4. **Bug Fixes**: Improved domain detection and duplicate record handling.
+    4. **Bug Fixes and Improvements**: 
+                        - Improved domain detection, 
+                        - Duplicate record handling, 
+                        - Ghcr image linking, 
+                        - Boilerplate service priority guidelines, 
+                        - Webhook detection and error handling.
     
     ### V2 Highlights:
     This release introduces significant enhancements to Graft, moving from basic local-to-server deployments to a more robust CI/CD-driven workflow using GitHub Actions and our new `graft-hook` service.
