--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,16 +37,11 @@ release:
   header: |
     ## Feature Update with Graft  🚀
     
-    ### V2.1 Highlights:
-    1. **Cloudflare API Integration**: Automated DNS zone mapping based on Traefik host labels.
-    2. **Cloudflare Zone Registry**: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
-    3. **Database Backup Automation(Infrastructure)**: Easily backup Infrastructure databases to S3/R2(Experimental).
-    4. **Bug Fixes and Improvements**: 
-                        - Improved domain detection, 
-                        - Duplicate record handling, 
-                        - Ghcr image linking, 
-                        - Boilerplate service priority guidelines, 
-                        - Webhook detection and error handling.
+    ### V2.2 Highlights:
+    1. **Rollback Feature**: Added rollback functionality to revert to previous deployments.
+    2. **Bug Fixes and Improvements**: 
+                        - Webhook detection and error handling.   
+                        - graft-compose.yml optimizations. 
     
     ### V2 Highlights:
     This release introduces significant enhancements to Graft, moving from basic local-to-server deployments to a more robust CI/CD-driven workflow using GitHub Actions and our new `graft-hook` service.
@@ -55,6 +50,9 @@ release:
     2. **Graft-Hook**: A new webhook service personalized specifically for Graft-based servers, maintaining a zero-config solution with proper security.
     3. **Automated GitHub Workflows**: Graft now generates production-ready workflows automatically from your `graft-compose.yml` context.
     4. **Enhanced Monitoring**: Easy CLI-based monitoring for `graft-hook`, including real-time build error logs.
+    5. **Cloudflare API Integration**: Automated DNS zone mapping based on Traefik host labels.
+    6. **Cloudflare Zone Registry**: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
+    7. **Database Backup Automation(Infrastructure)**: Easily backup Infrastructure databases to S3/R2(Experimental).
   
   footer: |
     ---
